--- a/client/templates/submit.html
+++ b/client/templates/submit.html
@@ -4,10 +4,8 @@
     <header>
         <div class="container">
             <div class="intro-text">
-            	form
-                <!-- <div class="intro-lead-in">Achieve your learning goals with community support.<br/> Pay $10 to commit. <br />Get 100% back when you achieve your goal by the deadline.</div>
-                <div class="intro-heading"></div>
-                <a href="/submit" class="page-scroll btn btn-xl">Create a Goal</a> -->
+            	 {{> quickForm collection="Goals" id="submit-goals" type="insert" template="bootstrap3-horizontal" buttonClasses="submit btn btn-primary"}}
+              
             </div>
         </div>
     </header>
