--- a/client/templates/nav.html
+++ b/client/templates/nav.html
@@ -9,14 +9,14 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                <a class="navbar-brand page-scroll" href="#page-top">Accountabilabuddies</a>
+                <a class="navbar-brand page-scroll" href="/">Accountabilabuddies</a>
             </div>
 
             <!-- Collect the nav links, forms, and other content for toggling -->
             <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
                 <ul class="nav navbar-nav navbar-right">
                     <li class="hidden">
-                        <a href="#page-top"></a>
+                        <a href="/"></a>
                     </li>
                     <li>
                         <a class="page-scroll" href="/submit">Create a Goal</a>
