--- a/client/templates/nav.html
+++ b/client/templates/nav.html
@@ -22,7 +22,7 @@
                         <a class="page-scroll" href="/submit">Create a Goal</a>
                     </li>
                     <li>
-                        <a class="page-scroll" href="#portfolio">How it works</a>
+                        <a class="page-scroll" href="/#how-it-works">How it works</a>
                     </li>
                 </ul>
             </div>
