--- a/client/templates/nav.html
+++ b/client/templates/nav.html
@@ -24,6 +24,9 @@
                     <li>
                         <a class="page-scroll" href="/#how-it-works">How it works</a>
                     </li>
+                    <li>
+                    {{> loginButtons align="right"}}
+                </li>
                 </ul>
             </div>
             <!-- /.navbar-collapse -->
