--- a/client/templates/pledge.html
+++ b/client/templates/pledge.html
@@ -8,16 +8,16 @@
 
 <form id="simplify-payment-form" action="" method="POST" class="form-inline">
     <div class="form-group">
-        <label>Amount</label>
+        <label>Pledge ($)</label>
         <input type="text" id="cc-amount">
     </div>
     <div class="form-group">
         <label>Credit Card Number: </label>
-        <input id="cc-number" type="text" maxlength="20" autocomplete="off" value="" autofocus />
+        <input id="cc-number" type="text" maxlength="20" autocomplete="off" placeholder="5555 5555 5555 7462" value="" autofocus />
     </div>
     <div class="form-group">
         <label>CVC: </label>
-        <input id="cc-cvc" type="text" maxlength="4" autocomplete="off" value=""/>
+        <input id="cc-cvc" type="text" maxlength="4" autocomplete="off" value="" placeholder="123"/>
     </div>
     <div class="form-group">
         <label>Expiry Date: </label>
