--- a/client/templates/footer.html
+++ b/client/templates/footer.html
@@ -17,9 +17,7 @@
                 </div>
                 <div class="col-md-4">
                     <ul class="list-inline quicklinks">
-                        <li><a href="#">Privacy Policy</a>
-                        </li>
-                        <li><a href="#">Terms of Use</a>
+                        <li><a href="/pledge">Donate to this project</a>
                         </li>
                     </ul>
                 </div>
