--- a/client/templates/nav.html
+++ b/client/templates/nav.html
@@ -9,7 +9,7 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                <a class="navbar-brand page-scroll" href="/">Accountabilabuddies</a>
+                <a class="navbar-brand page-scroll" href="/">Goals for Good</a>
             </div>
 
             <!-- Collect the nav links, forms, and other content for toggling -->
@@ -19,7 +19,7 @@
                         <a href="/"></a>
                     </li>
                     <li>
-                        <a class="page-scroll" href="/submit">Create a Goal</a>
+                        <a class="page-scroll" href="/submit">Share a Goal</a>
                     </li>
                     <li>
                         <a class="page-scroll" href="/#how-it-works">How it works</a>
