--- a/client/templates/pledge.html
+++ b/client/templates/pledge.html
@@ -5,7 +5,7 @@
 <div class="container" style="margin-top: 150px;">
             <div class="row">
                 <div class="col-lg-12 text-center">
-
+<h2>Just kidding... this form uses the Simplify API, but you can't really donate yet. If you do want project updates, invite yourself to the <a href="//goalsforgood.herokuapp.com/" target="_blank">slack chatroom here</a>. </h2>
 <form id="simplify-payment-form" action="" method="POST" class="form-inline">
     <div class="form-group">
         <label>Pledge ($)</label>
