--- a/client/templates/home.html
+++ b/client/templates/home.html
@@ -5,9 +5,9 @@
     <header>
         <div class="container">
             <div class="intro-text">
-                <div class="intro-lead-in">Achieve your learning goals with community support and sponsorship.<br/> Accept pledges to a cause of your choice.<br />100% will be paid when you achieve your goal by your deadline.</div>
+                <div class="intro-lead-in">1. Share a goal and give yourself a deadline. <br /> 2. Collect supporters. <br/> 3. They'll donate money to the cause of your choice when you complete your goal.  </div>
                 <div class="intro-heading"></div>
-                <a href="/submit" class="page-scroll btn btn-xl">Create a Goal</a>
+                <a href="/submit" class="page-scroll btn btn-xl">Share a Goal</a>
             </div>
         </div>
     </header>
@@ -31,7 +31,13 @@
             <div class="row">
                 <div class="col-lg-12 text-center">
                     <h2 class="section-heading">How it works</h2>
-                    <h3 class="section-subheading text-muted">There are so many free online and resources online to help us improve our skills, but being self-taught can be hard when </h3>
+                    <h3 class="section-subheading"><p>We all have personal goals. Whether it's becoming a full-stack web developer, running a half-marathon, reading more books, writing more often, or becoming a better cook, however, "life" often gets in the way and we end procrastinating on what we would love to achieve.</p>
+                    <p>Completing goals is often easier when structure (making a habit out of spending time on your goal) and community support is there to help you out when you get stuck.</p>
+                    
+                     </h3>
+
+                <a class="slack btn" href="//goalsforgood.herokuapp.com" target="_blank">Join the slack chatroom</a><br />
+                <span>This idea was conceived on May 2nd, 2015 at Techcrunch Disrupt's 2015 hackathon. Join the slack to discuss the idea.</span>
                 </div>
             </div>
         </div>
