--- a/client/templates/goals_list.html
+++ b/client/templates/goals_list.html
@@ -8,10 +8,12 @@
                     <p class="text-muted">{{description}}</p>
                     <p><span class="label">Start:</span> {{start}}</p>
                     <p><span class="label">Goal Deadline:</span> {{end}}</p>
-                    <p><span class="label">All pledges will be donated to:</span></p>
+                    <p><span class="label">Supporters will donate pledges to:</span></p>
                     <p class="cause">{{cause}}</p>
-                    <a class="btn btn-primary">Get help</a>
-                    <a class="btn btn-primary" href="/pledge">Support this goal</a>
+                    <p class="meta">
+                    <a href="#">8 progress updates</a> |
+                    <a href="#">3 supporters so far</a>
+               		</p>
                 </div>
 
         {{/each}}
