--- a/client/templates/home.html
+++ b/client/templates/home.html
@@ -37,7 +37,7 @@
                      </h3>
 
                 <a class="slack btn" href="//goalsforgood.herokuapp.com" target="_blank">Join the slack chatroom</a><br />
-                <span class="footnote">This idea was conceived on May 2nd, 2015 at Techcrunch Disrupt's 2015 hackathon. Join the slack to discuss the idea.</span>
+                <span class="footnote">This idea was conceived on the afternoon of May 2nd, 2015 at Techcrunch Disrupt's 2015 hackathon. Join the slack to discuss the idea.</span>
                 </div>
             </div>
         </div>
