ok more wording tweaks

--- a/client/templates/goals_list.html
+++ b/client/templates/goals_list.html
@@ -8,7 +8,7 @@
                     <p class="text-muted">{{description}}</p>
                     <p><span class="label">Start:</span> {{start}}</p>
                     <p><span class="label">Goal Deadline:</span> {{end}}</p>
-                    <p><span class="label">Supporters will donate pledges to:</span></p>
+                    <p><span class="label">Where do you want donations to go?</span></p>
                     <p class="cause">{{cause}}</p>
                     <p class="meta">
                     <a href="#">8 progress updates</a> |
