--- a/client/templates/home.html
+++ b/client/templates/home.html
@@ -37,7 +37,8 @@
                      </h3>
 
                 <a class="slack btn" href="//goalsforgood.herokuapp.com" target="_blank">Join the slack chatroom</a><br />
-                <span class="footnote">This idea was conceived on the afternoon of May 2nd, 2015 at Techcrunch Disrupt's 2015 hackathon. Join the slack to discuss your goals.</span>
+                <span class="footnote">This idea was conceived on the afternoon of May 2nd, 2015 at Techcrunch Disrupt's 2015 hackathon and is very much a prototype. Join the slack if you're interested in sharing a thought about goals and productivity!</span>
+                <p class="footnote">TODO (ran out of time): Fix user accounts, improve goal pages</p>
                 </div>
             </div>
         </div>
