--- a/client/templates/submit.html
+++ b/client/templates/submit.html
@@ -4,7 +4,7 @@
     <header>
         <div class="container">
             <div class="intro-text">
-            	 {{> quickForm collection="Goals" id="submit-goals" type="insert" template="bootstrap3-horizontal" buttonClasses="submit btn btn-primary"}}
+            	 {{> quickForm collection="Goals" id="submit-goals" type="insert" template="bootstrap3-horizontal" buttonClasses="submit btn btn-primary goal-submit"}}
               
             </div>
         </div>
