--- a/client/templates/goal_page.html
+++ b/client/templates/goal_page.html
@@ -1,5 +1,41 @@
 <template name="goalPage">
-  <div class="goal-page page">
-    {{> goalItem}}
-  </div>
+	{{> nav}}
+
+<div class="container" style="margin-top: 150px;">
+            <div class="row">
+                <div class="col-lg-12 text-center">
+                	 <div class="col-md-4 goal-item">
+	                  	<h4 class="service-heading">{{goal}}</h4>
+	                    <p class="text-muted">{{description}}</p>
+	                    <p><span class="label">Start:</span> {{start}}</p>
+	                    <p><span class="label">Goal Deadline:</span> {{end}}</p>
+	                    <p><span class="label">Where do you want donations to go?</span></p>
+	                    <p class="cause">{{cause}}</p>
+	                    <p class="meta">
+	                    	<a class="btn btn-primary">Become a supporter</a>
+	                    	<h4>0 progress updates and 3 supporters so far.</h4>
+	               		</p>
+
+                	</div>
+                	<div class="col-md-8"> 
+                	    <form id="updates-form">
+	                    <div class="form-group">
+						  <textarea class="form-control" rows="5" id="progress-update"></textarea>
+						</div>
+						
+	               		<a class="btn btn-primary progress-update">Share a progress update</a>
+						</form>
+	               			<p>{{> goalUpdates}}</p>
+                	</div>
+
+                
+
+                </div>
+            </div><!--row-->
+</div>
+
+
+
+
+  {{> footer}}
 </template>
