--- a/client/templates/goals_list.html
+++ b/client/templates/goals_list.html
@@ -4,7 +4,7 @@
  		{{#if goals}}
  		{{#each goals}}
                 <div class="col-md-4 goal-item">
-                  	<h4 class="service-heading">{{goal}}</h4>
+                  	<h4 class="service-heading"><a href="{{pathFor 'goalPage'}}">{{goal}}</a></h4>
                     <p class="text-muted">{{description}}</p>
                     <p><span class="label">Start:</span> {{start}}</p>
                     <p><span class="label">Goal Deadline:</span> {{end}}</p>
